--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             d="M1 4h15v3h3.0246l3.9793 5.6848V18h-2.6567c-.4218 1.3056-1.6473 2.25-3.0933 2.25-1.446 0-2.6715-.9444-3.0932-2.25h-3.9044c-.4217 1.3056-1.6472 2.25-3.0932 2.25S4.4916 19.3056 4.0698 18H1V4zm3.0698 12c.4218-1.3056 1.6473-2.25 3.0933-2.25 1.446 0 2.6715.9444 3.0932 2.25H14V6H3v10h1.0698zM16 14.0007a3.24 3.24 0 0 1 1.2539-.2507c1.446 0 2.6715.9444 3.0933 2.25h.6567v-2.6848L17.9833 9H16v5.0007zM7.163 15.75c-.6903 0-1.25.5596-1.25 1.25s.5597 1.25 1.25 1.25c.6904 0 1.25-.5596 1.25-1.25s-.5596-1.25-1.25-1.25zm10.0909 0c-.6904 0-1.25.5596-1.25 1.25s.5596 1.25 1.25 1.25 1.25-.5596 1.25-1.25-.5596-1.25-1.25-1.25z">
                         </path>
                     </svg>
-                    <span style="margin: 0px 9px;">Inserisci il codice postale</span>
+                   <a href="#"><span style="margin: 0px 9px;">Inserisci il codice postale</span></a> 
                 </div>
             </div>
             <div class="container-selezione-negozio">
@@ -173,8 +173,7 @@
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M22 20V4H2v16h20zM20 6H4v12h3v-8h10v8h3V6zm-9 6H9v6h2v-6zm2 6h2v-6h-2v6z"></path>
                     </svg>
-                    <span style="margin: 0px 9px;">Seleziona il negozio</span>
-
+                    <a href="#"><span style="margin: 0px 9px;">Seleziona il negozio</span></a>
                 </div>
             </div>
         </div>
@@ -184,14 +183,17 @@
             <div class="news-content">
                 <div class="news-title">
                     <h2>
-                        Trasforma i momenti d'estate in occasioni <br> di festa
+                        Festeggia la bella stagione all'aperto
                     </h2>
                     <p>La nuova collezione BRÖGGAN, colorata e solare, è stata realizzata
-                        per accompagnarti durante i festeggiamenti all'aperto per tutta l'estate.</p>
+                        per accompagnarti durante i festeggiamenti all'aperto</p>
                 </div>
-                <button class="news-button">
-                    <a href="#">Scopri tutte le selezioni per balcone e giardino</a>
-                </button>
+                <div class="container-button-news">
+                    <button class="news-button">
+                        <a href="#">Scopri tutte le selezioni per balcone e giardino</a>
+                    </button>
+                </div>
+
             </div>
         </div>
         <div class="image-container">
